fix overflow content issue in the editor

--- a/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
+++ b/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
@@ -63,6 +63,10 @@
 			max-height: 100vh;
 			overflow-y: auto;
 			padding: $gap-largest $gap $gap;
+
+			> .block-editor-block-list__layout {
+				min-height: 100vh;
+			}
 		}
 
 		// Temporary fix after the appender button was positioned absolute
